// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`T1.4 base snapshots > generate("backpacking", neutral) matches committed snapshot 1`] = `
[
  {
    "baseQty": 1,
    "category": "Shelter",
    "name": "Tent",
    "note": "1 per ~2 people (configurable on trip)",
    "removed": false,
    "scope": "per_tent",
    "sortOrder": 0,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Shelter",
    "name": "Tent stakes & guylines",
    "note": undefined,
    "removed": false,
    "scope": "per_tent",
    "sortOrder": 1,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Shelter",
    "name": "Footprint / ground tarp",
    "note": undefined,
    "removed": false,
    "scope": "per_tent",
    "sortOrder": 2,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Sleep",
    "name": "Sleeping bag",
    "note": "temp-rated for expected lows",
    "removed": false,
    "scope": "per_person",
    "sortOrder": 3,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Sleep",
    "name": "Sleeping pad",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 4,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Stove",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 5,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Fuel",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 6,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Cook pot",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 7,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Eating kit (bowl/spork/mug)",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 8,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Dish kit (soap/sponge/towel)",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 9,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Water",
    "name": "Water bottles / reservoir",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 10,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Water",
    "name": "Water filter / purifier",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 11,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Water",
    "name": "Water carry/storage jug",
    "note": "tap on site — top up as needed",
    "removed": false,
    "scope": "shared",
    "sortOrder": 12,
    "source": "amenity",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Food",
    "name": "Meals & snacks",
    "note": "planned per day",
    "removed": false,
    "scope": "per_person",
    "sortOrder": 13,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Food",
    "name": "Bear canister",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 14,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Navigation",
    "name": "Map & compass",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 15,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Navigation",
    "name": "Headlamp",
    "note": "+ spare batteries",
    "removed": false,
    "scope": "per_person",
    "sortOrder": 16,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Health & Safety",
    "name": "First-aid kit",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 17,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Health & Safety",
    "name": "Sunscreen",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 18,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Health & Safety",
    "name": "Insect repellent",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 19,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Hygiene",
    "name": "Toiletries",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 20,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Hygiene",
    "name": "Toilet paper",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 21,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Hygiene",
    "name": "Trash bags",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 22,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Tools & Repair",
    "name": "Multi-tool / knife",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 23,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Tools & Repair",
    "name": "Duct tape / repair kit",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 24,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Tools & Repair",
    "name": "Paracord",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 25,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Personal & Misc",
    "name": "ID / permits / reservation",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 26,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Personal & Misc",
    "name": "Cash",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 27,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Personal & Misc",
    "name": "Entertainment (cards/games/book)",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 28,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Personal & Misc",
    "name": "Power bank",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 29,
    "source": "template",
    "unit": undefined,
  },
]
`;

exports[`T1.4 base snapshots > generate("car", neutral) matches committed snapshot 1`] = `
[
  {
    "baseQty": 1,
    "category": "Shelter",
    "name": "Tent",
    "note": "1 per ~2 people (configurable on trip)",
    "removed": false,
    "scope": "per_tent",
    "sortOrder": 0,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Shelter",
    "name": "Tent stakes & guylines",
    "note": undefined,
    "removed": false,
    "scope": "per_tent",
    "sortOrder": 1,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Shelter",
    "name": "Footprint / ground tarp",
    "note": undefined,
    "removed": false,
    "scope": "per_tent",
    "sortOrder": 2,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Sleep",
    "name": "Sleeping bag",
    "note": "temp-rated for expected lows",
    "removed": false,
    "scope": "per_person",
    "sortOrder": 3,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Sleep",
    "name": "Sleeping pad",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 4,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Sleep",
    "name": "Pillow",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 5,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Stove",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 6,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Fuel",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 7,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Cook pot",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 8,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Eating kit (bowl/spork/mug)",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 9,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Cooler",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 10,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Camp table",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 11,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Dish kit (soap/sponge/towel)",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 12,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Fire starter",
    "note": "fire rings on site",
    "removed": false,
    "scope": "shared",
    "sortOrder": 13,
    "source": "amenity",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Firewood",
    "note": "available on site — buy local",
    "removed": false,
    "scope": "shared",
    "sortOrder": 14,
    "source": "amenity",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Roasting forks",
    "note": "fire rings on site",
    "removed": false,
    "scope": "shared",
    "sortOrder": 15,
    "source": "amenity",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Kitchen",
    "name": "Campfire grill grate",
    "note": "fire rings on site",
    "removed": false,
    "scope": "shared",
    "sortOrder": 16,
    "source": "amenity",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Water",
    "name": "Water bottles / reservoir",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 17,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Water",
    "name": "Water carry/storage jug",
    "note": "tap on site — top up as needed",
    "removed": false,
    "scope": "shared",
    "sortOrder": 18,
    "source": "amenity",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Food",
    "name": "Meals & snacks",
    "note": "planned per day",
    "removed": false,
    "scope": "per_person",
    "sortOrder": 19,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Navigation",
    "name": "Headlamp",
    "note": "+ spare batteries",
    "removed": false,
    "scope": "per_person",
    "sortOrder": 20,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Navigation",
    "name": "Lantern",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 21,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Health & Safety",
    "name": "First-aid kit",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 22,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Health & Safety",
    "name": "Sunscreen",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 23,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Health & Safety",
    "name": "Insect repellent",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 24,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Health & Safety",
    "name": "Fire extinguisher / bucket",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 25,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Hygiene",
    "name": "Toiletries",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 26,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Hygiene",
    "name": "Toilet paper",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 27,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Hygiene",
    "name": "Trash bags",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 28,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Tools & Repair",
    "name": "Multi-tool / knife",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 29,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Tools & Repair",
    "name": "Duct tape / repair kit",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 30,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Tools & Repair",
    "name": "Paracord",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 31,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Personal & Misc",
    "name": "ID / permits / reservation",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 32,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Personal & Misc",
    "name": "Cash",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 33,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Personal & Misc",
    "name": "Camp chairs",
    "note": undefined,
    "removed": false,
    "scope": "per_person",
    "sortOrder": 34,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Personal & Misc",
    "name": "Entertainment (cards/games/book)",
    "note": undefined,
    "removed": false,
    "scope": "shared",
    "sortOrder": 35,
    "source": "template",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Personal & Misc",
    "name": "Extension cord",
    "note": "site has electricity",
    "removed": false,
    "scope": "shared",
    "sortOrder": 36,
    "source": "amenity",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Personal & Misc",
    "name": "Power strip",
    "note": "site has electricity",
    "removed": false,
    "scope": "shared",
    "sortOrder": 37,
    "source": "amenity",
    "unit": undefined,
  },
  {
    "baseQty": 1,
    "category": "Personal & Misc",
    "name": "Device chargers",
    "note": "site has electricity",
    "removed": false,
    "scope": "per_person",
    "sortOrder": 38,
    "source": "amenity",
    "unit": undefined,
  },
]
`;
